--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,3 +1,47 @@
 .home {
-    overflow: auto;
-  }
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between; 
+  align-items: flex-start; 
+  height: 100vh; 
+  padding: 2rem;
+}
+
+
+.home h1 {
+  text-decoration: none;
+  font-weight: bolder;
+  font-size: 80px;
+  text-transform: uppercase;
+  line-height: 1.2;
+}
+
+.home .change {
+  color:  #b8ad09;
+}
+
+.home .yourLife {
+  color: beige;
+}
+
+.contact-info {
+  align-self: center;
+  text-align: center;
+  margin-top: auto;
+}
+
+.contact {
+  font-size: 20px;
+  margin-bottom: 1rem;
+  color: beige;
+}
+
+.contact-methods {
+  display: flex;
+  gap: 1rem;
+}
+
+.contact-methods span {
+  font-size: 20px;
+  color:  #b8ad09;
+}
