--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -20,13 +20,19 @@
     max-width: 300px; 
 }
 
-.login .show {
-    border-radius: 50px
-}
+/* .login .toggleButton {
+    margin-right: 10%;
+} */
+
 
 .login p {
     color: black;
     font-weight: bolder;
     margin-top: 10px;
     font-size: 1rem;
+}
+
+.loginButton {
+    width: 100%;
+    max-width: 300px;
 }
