--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -1,3 +1,4 @@
+
 .login {
     display: flex;
     flex-direction: column;
@@ -13,11 +14,23 @@
     margin-bottom: 20px;
 }
 
+
+.login form {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
 .login .email,
-.login .password {
-    margin-top: 10px;
-    width: 100%;
-    max-width: 300px; 
+.login .passwordInput {
+    background: hsl(0deg 0% 100%);
+    box-shadow: 0 0 2em hsl(231deg 62% 94%);
+    padding: 1em;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    border-radius: 20px;
+    color: hsl(0deg 0% 30%);
 }
 
 /* .login .toggleButton {
@@ -33,6 +46,13 @@
 }
 
 .loginButton {
-    width: 100%;
-    max-width: 300px;
+    display: inline-block;
+    font-size: 14px;
+    padding: 17px 50px 16px;
+    color: #ffffff;
+    background: #b8ad09;;
+    line-height: normal;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font-weight: 700;
 }
