--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -33,10 +33,6 @@
     color: hsl(0deg 0% 30%);
 }
 
-/* .login .toggleButton {
-    margin-right: 10%;
-} */
-
 
 .login p {
     color: black;
@@ -55,4 +51,12 @@
     letter-spacing: 5px;
     text-transform: uppercase;
     font-weight: 700;
+    border-radius: 20px;
+}
+
+.logo {
+    width: 20%;
+    height: auto;
+    opacity: 0.7;
+
 }
