--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,7 +7,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: auto;
+  overflow: hidden; 
+  height: 100vh; 
+  width: 100vw;
+  position: relative;
+  box-sizing: border-box; 
 }
 
 code {
@@ -13,15 +19,23 @@ code {
     monospace;
 }
 
-html {
+/* html {
   overflow: auto;
   height: 100%;
   position: relative;
+} */
+
+html {
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  box-sizing: border-box;
 }
 
 html::before {
   content: "";
-  background: url("/src/images/pt-background.jpg");
+  background: url("/src/images/pt-background.jpg") no-repeat center center fixed;;
   background-size: cover;
   position: absolute;
   top: 0;
