--- a/src/components/Register/register.css
+++ b/src/components/Register/register.css
@@ -30,6 +30,10 @@
     font-size: 1.5rem;
 }
 
+.register input{
+    margin-bottom: 1em;
+}
+
 .register .firstname,
 .register .lastname,
 .register .emailAddress,
@@ -42,4 +46,17 @@
     gap: 0.5em;
     border-radius: 20px;
     color: hsl(0deg 0% 30%);
+}
+
+.submitButton {
+        display: inline-block;
+        font-size: 14px;
+        padding: 17px 50px 16px;
+        color: #ffffff;
+        background: #b8ad09;;
+        line-height: normal;
+        letter-spacing: 5px;
+        text-transform: uppercase;
+        font-weight: 700;
+        border-radius: 20px; 
 }
