--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -31,8 +31,29 @@
     gap: 0.5em;
     border-radius: 20px;
     color: hsl(0deg 0% 30%);
+    position: relative;
 }
 
+.passwordContainer .inputWrapper {
+    position: relative;
+    width: 100%;
+}
+
+.passwordContainer .toggleButton {
+    position: absolute;
+    right: 10px; /* Position the button inside the input */
+    top: 50%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    font-size: 1.5em;
+    color: hsl(0deg 0% 30%);
+}
 
 .login p {
     color: black;
@@ -59,4 +80,8 @@
     height: auto;
     opacity: 0.7;
 
+}
+
+a {
+    text-decoration: none;
 }
